tests/compilefail34.out
[1mtests/compilefail34.pas:5:16: [0m[1m[91merror:[0m Cannot have a sign before a Boolean constant
     5 | 	myfalse = -True;